--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
         <h3>Naohiro Hayashibara</h3>
+        <p>Faculty of Information Science and Engineering, Kyoto Sangyo University</p>
+
     </body>
 </html>
