added publication list.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <body>
         <h3>Naohiro Hayashibara</h3>
         <p>Faculty of Information Science and Engineering, Kyoto Sangyo University</p>
+        <p><a href="http://www.cc.kyoto-su.ac.jp/~naohaya/publications/">Publication</a></p>
 
     </body>
 </html>
